# 42temp

./: CMakeLists.txt  README.md  settings.json
ex00/: ft_strcpy.c
ex01/: ft_strncpy.c
ex02/: ft_str_is_alpha.c
ex03/: ft_str_is_numeric.c
ex04/: ft_str_is_lowercase.c
ex05/: ft_str_is_uppercase.c
ex06/: ft_str_is_printable.c
ex07/: ft_strupcase.c
ex08/: ft_strlowcase.c
ex09/: ft_strcapitalize.c
ex10/: a.out  ft_strlcpy.c  main02.c
ex11/: a.out  ft_putstr_non_printable.c  main.c
ex12/: a.out  ft_print_memory.c  main.c
ft_printf/: Makefile  check.c  ft_printf.c  ft_printf.h  ft_printf_utils.c  ft_printf_utils2.c  main.c  print.c  print_cpes.c  print_diuxp.c
get_next_line/: get_next_line.c  get_next_line_bonus.c  get_next_line_bonus.h  get_next_line_utils_bonus.c
